--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <header > </header>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
