well, it is the end project, all good all worked. at least what i tried. can be added some little twiks . like better css. but from neccessary only check code and add some comments, like clean a little bit of what i dont need. but the project works and i added a different api for qoute cause the given api was bad

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <header > </header>
-  <body>
-    <div id="root"></div>
+  <body id="root" >
+    <div ></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
